# basketball-decisions

./: .gitignore  README.md  package.json  pyproject.toml
backend/: requirements.txt
backend/app/: __init__.py  main.py
backend/tests/: conftest.py  test_artifact_map_api.py  test_coach_reports_api.py  test_dataset_curation_api.py  test_dataset_health_api.py  test_decision_diagnostics_api.py  test_decision_engine_api.py  test_decision_rules_api.py  test_development_dashboard_api.py  test_drill_recommendations_api.py  test_evidence_locked_llm_summary_api.py  test_external_review_synthesis_api.py  test_player_home_api.py  test_player_identity_api.py  test_player_value_api.py  test_practice_executions_api.py  test_practice_plans_api.py  test_project_bundle.py  test_quiz_api.py  test_recognition_baseline_api.py  test_recognition_quality_api.py  test_reference_videos_api.py  test_review_queue_api.py  test_sample_data_api.py  test_source_governance_api.py  test_tracking_review_api.py  test_video_source_api.py  test_workflows_api.py
docs/: coordinate-system.md  m17-review-queue-action-workflow-review.md  m23-practice-plan-builder-review.md
docs/architecture/: ai-intervention-policy.md  artifact-map.md  backend-services.md  frontend-routes.md  local-artifacts.md  ml-assisted-review-queue-ranking-spec.md
docs/product/: demo-script.md  drill-template-standard.md  future-backlog-triage.md  information-architecture.md  overview.md  product-positioning-review.md  (+8 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.json
tests/: test_backend_static.py
(+175 files in other folders)
